--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^7.2.1",
     "morgan": "^1.7.0",
     "mysql": "^2.12.0",
+    "nodemailer": "^3.1.3",
     "serve-favicon": "^2.3.2"
   }
 }
